# lightstream

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  (+1 more)
python/: Cargo.toml  README.md  pyproject.toml  rust-toolchain.toml
python/examples/: run-example.py
python/examples/common/: args.rs  datagen.py  datagen.rs  tls.rs
python/examples/pipes/claude/: produce.py  watch.py
python/examples/pipes/jq/: consume.py  produce.py
python/examples/pipes/sed/: consume.py  produce.py
python/examples/pipes/sql/: feed.py  query.py
python/examples/transport/http/: client.py  server.py  server.rs
python/examples/transport/https/: client.py  server.py  server.rs
python/examples/transport/quic/: client.py  server.py  server.rs
python/examples/transport/stdio/: client.py  server.py  server.rs
python/examples/transport/tcp/: client.py  server.py  server.rs
python/examples/transport/uds/: client.py  server.py  server.rs
python/examples/transport/ws/: client.py  server.py  server.rs
python/examples/transport/wss/: client.py  server.py  server.rs
python/examples/transport/wt/: client.py  server.py  server.rs
python/src/: errors.rs  input.rs  lib.rs  listeners.rs  message.rs  output.rs  runtime.rs  tls.rs  uri.rs
python/tests/: test_accept.py  test_files.py  test_interop.py  test_network.py  test_protocol.py  test_tls_wires.py
rust/: Cargo.toml  README.md  rust-toolchain.toml
rust/benches/: README.md  run-lightstream-industry-bench-local.sh
rust/benches/arrow/: arrow_flight_comparison.rs
rust/benches/aws/: Dockerfile  README.md  receiver.rs  run.sh  sender.rs
rust/benches/aws/terraform/: README.md  main.tf
rust/benches/common/: arrow_flight_bench.rs  bench_helpers.rs
rust/benches/ecs/: .dockerignore  Dockerfile  README.md  run-local-docker.sh  run.sh  sink.rs  source.rs
rust/benches/ecs/terraform/: main.tf
rust/benches/file/: chunked_throughput.rs  file_throughput.rs  mmap_streaming.rs
rust/benches/json/: json_throughput.rs
rust/benches/transport/: ipc_throughput.rs  lightstream_throughput.rs  transport_bench_matrix.rs
rust/examples/arrow/: ipc_basic.rs  mmap.rs  table_reader.rs  table_stream_reader.rs  table_stream_writer.rs  table_writer.rs
rust/examples/csv/: basic.rs
rust/examples/helpers/: mod.rs
rust/examples/http/: arrow-parallel.rs  arrow.rs
rust/examples/lightstream/: protobuf_arrow.rs  protocol.rs
rust/examples/parquet/: file_io.rs
rust/examples/quic/: arrow-parallel.rs  arrow.rs  lightstream.rs
rust/examples/tcp/: arrow.rs  arrow_tls.rs  lightstream.rs
rust/examples/tlv/: protocol.rs
rust/examples/uds/: arrow.rs  lightstream.rs
rust/examples/websocket/: arrow.rs  arrow_tls.rs  lightstream.rs
rust/examples/webtransport/: arrow.rs  lightstream.rs
rust/flatb/: Message.fbs  NOTES.md  Schema.fbs
rust/pyarrow-roundtrip/: generate_pyarrow_files.py  validate_lightstream_output.py
rust/src/: constants.rs  enums.rs  error.rs  lib.rs  test_helpers.rs  utils.rs
rust/src/arrow/: file.rs  message.rs  schema.rs
rust/src/compression/: ipc.rs  mod.rs
rust/src/models/: mmap.rs
rust/src/models/codecs/: ipc.rs  lightstream.rs  mod.rs
rust/src/models/decoders/: csv.rs  int_ascii.rs  limits.rs  parquet.rs  tlv.rs
rust/src/models/decoders/ipc/: mod.rs  parser.rs  table_stream_decoder.rs
rust/src/models/decoders/json/: builder.rs  mod.rs  push.rs  row_decoder.rs  simd.rs  value.rs
rust/src/models/encoders/: csv.rs  int_ascii.rs  json.rs
rust/src/models/encoders/ipc/: mod.rs  record_batch.rs  schema.rs  table_stream.rs
rust/src/models/encoders/parquet/: data.rs  metadata.rs
rust/src/models/encoders/tlv/: mod.rs  tlv_stream.rs
rust/src/models/frames/: ipc_message.rs  json.rs  lightstream_message.rs  tlv_frame.rs  websocket.rs
rust/src/models/interfaces/: mod.rs
rust/src/models/interfaces/json/: mod.rs  path.rs  schema.rs
rust/src/models/io_uring/: buf.rs  connection.rs  mod.rs  stream.rs  websocket.rs
rust/src/models/protocol/: ipc.rs  mod.rs
rust/src/models/protocol/lightstream/: connection.rs  mod.rs
rust/src/models/readers/: csv.rs  http.rs  json.rs  lightstream.rs  parquet.rs  quic.rs  stdio.rs  tcp.rs  uds.rs  websocket.rs  webtransport.rs
rust/src/models/readers/chunked/: arrow.rs  csv.rs  parquet.rs
rust/src/models/readers/ipc/: file_table.rs  mmap_table.rs  table.rs  window.rs
rust/src/models/readers/parallel/: http.rs  lightstream.rs  quic.rs  tcp.rs
rust/src/models/serialise/: ipc.rs
rust/src/models/sinks/: live_table_sink.rs  table_sink.rs  tlv_sink.rs
rust/src/models/streams/: async_read.rs  disk.rs  framed_byte_stream.rs  http.rs  quic.rs  stdio.rs  stream_arena.rs  tcp.rs  uds.rs  websocket.rs  webtransport.rs
rust/src/models/transports/: http.rs  quic.rs  tcp.rs  uds.rs  websocket.rs  webtransport.rs
rust/src/models/types/: parquet.rs
rust/src/models/writers/: csv.rs  http.rs  json.rs  lightstream.rs  parquet.rs  quic.rs  stdio.rs  tcp.rs  uds.rs  websocket.rs  webtransport.rs
rust/src/models/writers/chunked/: arrow.rs  csv.rs  parquet.rs
rust/src/models/writers/ipc/: sync_table.rs  table.rs  table_stream.rs
rust/src/models/writers/parallel/: http.rs  lightstream.rs  quic.rs  tcp.rs
rust/src/traits/: byte_stream.rs  chunked_table_reader.rs  chunked_table_writer.rs  decoder.rs  encoder.rs  frame_decoder.rs  frame_encoder.rs  parallel_transport_reader.rs  parallel_transport_writer.rs  serialise.rs  stream_buffer.rs  transport.rs  transport_reader.rs  transport_writer.rs
rust/tests/: http_parallel_roundtrip.rs  io_uring_roundtrip.rs  ipc_roundtrip.rs  json_roundtrip.rs  lightstream_parallel_roundtrip.rs  parquet_roundtrip.rs  protocol_roundtrip.rs  pyarrow_roundtrip.rs  quic_roundtrip.rs  stdio_roundtrip.rs  tcp_parallel_roundtrip.rs  tcp_roundtrip.rs  test_column_projection.rs  test_compression_api.rs  test_compression_integration.rs  test_compression_roundtrip.rs  test_mmap_shared_buffers.rs  transport_roundtrip.rs  uds_roundtrip.rs  websocket_roundtrip.rs  webtransport_roundtrip.rs
