[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lightstream-io"
version = "0.5.0"
description = "Streaming Arrow I/O for Python - files, sockets, and network transports with zero-copy minarrow interop."
readme = "README.md"
requires-python = ">=3.9"
license = "MPL-2.0"
authors = [{ name = "Peter Bower" }]
keywords = ["arrow", "streaming", "minarrow", "ipc", "parquet", "quic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["minarrow>=0.16"]

[project.urls]
Homepage = "https://github.com/SpaceCell/lightstream"
Repository = "https://github.com/SpaceCell/lightstream"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyarrow>=14.0", "polars>=1.0", "duckdb>=1.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "lightstream"
